Add Steps to Code format using pre-commit hooks